// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAnalysesByVersionByDay should also filter analysis based on the query 1`] = `
[
  {
    "byDay": {
      "1495065600000": [
        {
          "date": 2017-05-18T14:13:07.000Z,
          "events": [
            {
              "category": "QUALITY_PROFILE",
              "key": "AVxZtC-N7841nF4RNEMJ",
              "name": "Changes in "Default - SonarSource conventions" (Java)",
            },
          ],
          "key": "AVxZtCpH7841nF4RNEMI",
        },
      ],
    },
    "key": "AVyM9oI1HjR_PLDzRciU",
    "version": "1.1",
  },
  {
    "byDay": {
      "1494892800000": [
        {
          "date": 2017-05-16T07:09:59.000Z,
          "events": [
            {
              "category": "VERSION",
              "key": "AVyM9oI1HjR_PLDzRciU",
              "name": "1.0",
            },
            {
              "category": "QUALITY_PROFILE",
              "key": "AVwQF7zXl-nNFgFWOJ3W",
              "name": "Changes in "Default - SonarSource conventions" (Java)",
            },
          ],
          "key": "AVwQF7kwl-nNFgFWOJ3V",
        },
      ],
    },
    "key": "AVyM9oI1HjR_PLDzRciU",
    "version": "1.0",
  },
]
`;

exports[`getAnalysesByVersionByDay should also filter analysis based on the query 2`] = `
[
  {
    "byDay": {
      "1496966400000": [
        {
          "date": 2017-06-09T11:12:27.000Z,
          "events": [],
          "key": "AVyM9n3cHjR_PLDzRciT",
        },
      ],
    },
    "key": "AVyM9oI1HjR_PLDzRciU",
    "version": "1.1-SNAPSHOT",
  },
  {
    "byDay": {
      "1495065600000": [
        {
          "date": 2017-05-18T14:13:07.000Z,
          "events": [
            {
              "category": "QUALITY_PROFILE",
              "key": "AVxZtC-N7841nF4RNEMJ",
              "name": "Changes in "Default - SonarSource conventions" (Java)",
            },
          ],
          "key": "AVxZtCpH7841nF4RNEMI",
        },
      ],
      "1496966400000": [
        {
          "date": 2017-06-09T11:12:27.000Z,
          "events": [
            {
              "category": "VERSION",
              "key": "AVyM9oI1HjR_PLDzRciU",
              "name": "1.1",
            },
          ],
          "key": "AVyMjlK1HjR_PLDzRbB9",
        },
      ],
    },
    "key": "AVyM9oI1HjR_PLDzRciU",
    "version": "1.1",
  },
  {
    "byDay": {},
    "key": "AVyM9oI1HjR_PLDzRciU",
    "version": "1.0",
  },
]
`;

exports[`getAnalysesByVersionByDay should correctly map analysis by versions and by days 1`] = `
[
  {
    "byDay": {
      "1496966400000": [
        {
          "date": 2017-06-09T13:06:10.000Z,
          "events": [
            {
              "category": "VERSION",
              "key": "AVyM9oI1HjR_PLDzRciU",
              "name": "1.1-SNAPSHOT",
            },
          ],
          "key": "AVyMjlK1HjR_PLDzRbB9",
        },
        {
          "date": 2017-06-09T11:12:27.000Z,
          "events": [],
          "key": "AVyM9n3cHjR_PLDzRciT",
        },
      ],
    },
    "key": "AVyM9oI1HjR_PLDzRciU",
    "version": "1.1-SNAPSHOT",
  },
  {
    "byDay": {
      "1495065600000": [
        {
          "date": 2017-05-18T14:13:07.000Z,
          "events": [
            {
              "category": "QUALITY_PROFILE",
              "key": "AVxZtC-N7841nF4RNEMJ",
              "name": "Changes in "Default - SonarSource conventions" (Java)",
            },
          ],
          "key": "AVxZtCpH7841nF4RNEMI",
        },
        {
          "date": 2017-05-18T07:17:32.000Z,
          "events": [],
          "key": "AVwaa1qkpbBde8B6UhYI",
        },
      ],
      "1496966400000": [
        {
          "date": 2017-06-09T11:12:27.000Z,
          "events": [
            {
              "category": "VERSION",
              "key": "AVyM9oI1HjR_PLDzRciU",
              "name": "1.1",
            },
          ],
          "key": "AVyMjlK1HjR_PLDzRbB9",
        },
      ],
    },
    "key": "AVyM9oI1HjR_PLDzRciU",
    "version": "1.1",
  },
  {
    "byDay": {
      "1494288000000": [
        {
          "date": 2017-05-09T12:03:59.000Z,
          "events": [],
          "key": "AVvtGF3IY6vCuQNDdwxI",
        },
      ],
      "1494892800000": [
        {
          "date": 2017-05-16T07:09:59.000Z,
          "events": [
            {
              "category": "VERSION",
              "key": "AVyM9oI1HjR_PLDzRciU",
              "name": "1.0",
            },
            {
              "category": "QUALITY_PROFILE",
              "key": "AVwQF7zXl-nNFgFWOJ3W",
              "name": "Changes in "Default - SonarSource conventions" (Java)",
            },
          ],
          "key": "AVwQF7kwl-nNFgFWOJ3V",
        },
      ],
    },
    "key": "AVyM9oI1HjR_PLDzRciU",
    "version": "1.0",
  },
]
`;

exports[`getAnalysesByVersionByDay should create fake version 1`] = `
[
  {
    "byDay": {
      "1495065600000": [
        {
          "date": 2017-05-18T14:13:07.000Z,
          "events": [],
          "key": "AVxZtCpH7841nF4RNEMI",
        },
      ],
      "1496966400000": [
        {
          "date": 2017-06-09T13:06:10.000Z,
          "events": [],
          "key": "AVyMjlK1HjR_PLDzRbB9",
        },
        {
          "date": 2017-06-09T11:12:27.000Z,
          "events": [],
          "key": "AVyM9n3cHjR_PLDzRciT",
        },
        {
          "date": 2017-06-09T11:12:27.000Z,
          "events": [],
          "key": "AVyMjlK1HjR_PLDzRbB9",
        },
      ],
    },
    "key": null,
    "version": null,
  },
]
`;
